--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
         <script src="./lib/phaser.js"></script>
-        <script src="./javascript/basic.js"></script>
-        <!--<script src="./javascript/boot.js"></script>
+        <script src="./javascript/boot.js"></script>
         <script src="./javascript/preload.js"></script>
         <script src="./javascript/gameTitle.js"></script>
         <script src="./javascript/game.js"></script>
-        <script src="./javascript/main.js"></script>-->
+        <script src="./javascript/main.js"></script>
     </head>
     <body>
         
