--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
+        <title>Hello World!</title>
         <script src="./lib/phaser.js"></script>
         <script src="./javascript/boot.js"></script>
         <script src="./javascript/preload.js"></script>
