--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <title>Hello World!</title>
+        <script src="./lib/firebase.js"></script>
         <script src="./lib/phaser.js"></script>
         <script src="./javascript/boot.js"></script>
         <script src="./javascript/preload.js"></script>
         <script src="./javascript/gameTitle.js"></script>
+        <script src="./javascript/leaderboard.js"></script>
         <script src="./javascript/game.js"></script>
         <script src="./javascript/main.js"></script>
     </head>
