bug fix with firebase config

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         <script src="./javascript/game.js"></script>
         <script src="./javascript/main.js"></script>
     </head>
+    <script>
+        config = {
+            apiKey: "AIzaSyDnxvGLjbdy_c074-dw1VqYJEVWPYuz3MI",
+            authDomain: "heloflyscoreboard.firebaseapp.com",
+            databaseURL: "https://heloflyscoreboard.firebaseio.com",
+            projectId: "heloflyscoreboard",
+            storageBucket: "heloflyscoreboard.appspot.com",
+            messagingSenderId: "227421731216"
+        };
+        firebase.initializeApp(config);
+    </script>
     <body>
         
     </body>
